+ Fixed edge overlapping edge pointers (image, path) [WPF, METRO]
+ Fixed use of ControlFactory for edge deserialization [WPF, METRO] thanks to perturbare
+ Fixed some algorithm calculation problems, especial FR [ALL]
+ Fixed EdgeControl.ShowArrows to implement DependencyProperty [WPF, METRO]  thanks to perturbare
+ Fixed minor performance problems in ZoomControl [METRO]
+ Decoupled serialization logic from GraphX completely [ALL]  thanks to perturbare
+ Adjusted FR and BoundedFR default values for random initial positions [All]
+ Now GraphX for WPF requires only .NET Framework 4.0 to build & run [WPF]
+ Refactored almost all of the GraphX code for improvements and code quality. Changed many namespaces for better name reflection [ALL]

BREAKING CHANGES:
* !!!WARNING!!! This GraphX version has fallen under the heavy hand of code refactoring and along with the numerous code improvements 
	almost ALL of the namespaces has been changed to better reflect PCL and multiplatform library versioning. Also i've get rid of the
    several different XAML xmlns usings in favor of single one that reflects library platform. I'm very sorry that this changes will
	force you to update your GraphX projects but i realy felt that i must do it once and for all. Hope there will be no more
	such heavy changes in that direction.
	Core changes:
	- All controls, behaviours and their interfaces are moved to GraphX.WPF.Controls and GraphX.METRO.Controls namespace
	- All algorithms are spreaded across GraphX.PCL.Logic.Algorithms namespace with additional OverlapRemoval, LayoutAlgorithms, EdgeRouting endings
	- All base models and interfaces are now in GraphX.PCL.Common.Models namespace
	- All GraphX primitives (Point, Rect, etc.) are left in GraphX.Measure for better code readability in cases when they are intersected with System.Windows namespace twins
