@@ -1,7 +1,5 @@
 ﻿using System.Collections.Generic;
 using System.IO;
-using GraphX;
-using GraphX.PCL.Common.Interfaces;
 using GraphX.PCL.Common.Models;
 using YAXLib;
 
